# learn-kubernetes-real-project

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile
backend/migrations/: 20260528010000_create_users_table.sql  20260528020000_create_tasks_table.sql
backend/src/: lib.rs  main.rs
backend/src/common/: config.rs  db.rs  errors.rs  mod.rs
backend/src/handlers/: auth.rs  health.rs  mod.rs  task.rs
backend/src/middleware/: auth.rs  mod.rs
backend/src/models/: mod.rs  task.rs  user.rs
backend/src/routes/: auth.rs  mod.rs  task.rs
backend/src/utils/: jwt.rs  mod.rs  password.rs
docs/: 00-prerequisites.md  01-konsep-dasar.md  02-containerization.md  03-first-deployment.md  03-local-minikube.md  04-first-deployment.md  05-config-secrets.md  05-database.md  06-database.md  07-networking.md  08-observability.md  09-production.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  main.js
frontend/src/components/: Login.svelte  TaskList.svelte
frontend/src/lib/: api.js
frontend/src/styles/: global.css
k8s/: 03-secret.yaml  04-network-policy.yaml  06-postgres-service.yaml  07-backend-deployment.yaml  09-frontend-deployment.yaml  11-ingress.yaml  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  hpa.yaml  namespace.yaml  postgres-statefulset.yaml
k8s-local/: README.md  kustomization.yaml  patch-image-pull-policy.yaml  patch-ingress.yaml  patch-postgres-storageclass.yaml
